feat(vscode): ts plugin debug in extension finally!

--- a/packages/ts-plugin/.vscode/launch.json
+++ b/packages/ts-plugin/.vscode/launch.json
@@ -8,9 +8,14 @@
       "request": "attach",
       "port": 5999,
       "sourceMaps": true,
+      "preLaunchTask": {
+				"type": "npm",
+				"script": "build:tsc:watch"
+			},
+      "debugServer": 5999,
       "outFiles": [
         "${workspaceRoot}/build/**/*.js",
-        "!**/node_modules/**"
+        "${workspaceRoot:ts-plugin}/packages/**/*.js"
       ]
     },
     {
