--- a/packages/ts-plugin/tsconfig.build.json
+++ b/packages/ts-plugin/tsconfig.build.json
@@ -5,8 +5,7 @@
     "outDir": "build",
     "declaration": true,
     "sourceMap": true,
-    "noEmit": false,
-    "declarationMap": true
+    "noEmit": false
   },
   "exclude": ["./test/"]
 }
