--- a/packages/ts-plugin/.vscode/launch.json
+++ b/packages/ts-plugin/.vscode/launch.json
@@ -6,23 +6,14 @@
       "name": "Attach to VS Code TS Server",
       "type": "node",
       "request": "attach",
-      "port": 5999,
       "sourceMaps": true,
       "preLaunchTask": {
 				"type": "npm",
 				"script": "build:tsc:watch"
 			},
-      "debugServer": 5999,
       "outFiles": [
-        "${workspaceRoot}/build/**/*.js",
-        "${workspaceRoot:ts-plugin}/packages/**/*.js"
+        "${workspaceRoot}/build/**/*.js"
       ]
-    },
-    {
-      "type": "node",
-      "request": "attach",
-      "name": "Attach To TS Server",
-      "port": 5999
     },
     {
       "type": "node",
