--- a/packages/vscode-extension/.vscode/launch.json
+++ b/packages/vscode-extension/.vscode/launch.json
@@ -1,6 +1,16 @@
 // A launch configuration that compiles the extension and then opens it inside a new window
 {
   "version": "0.2.0",
+  "compounds": [
+    {
+      "name": "Compound",
+      "configurations": [
+        "Launch Extension",
+        "Attach to VS Code TS Server"
+      ],
+      "preLaunchTask": "npm: build:tsc:watch"
+    }
+  ],
   "configurations": [
     {
       "type": "extensionHost",
@@ -9,9 +19,9 @@
       "runtimeExecutable": "${execPath}",
       "autoAttachChildProcesses": true,
       "preLaunchTask": {
-				"type": "npm",
-				"script": "build:tsc:watch"
-			},
+        "type": "npm",
+        "script": "build:tsc:watch"
+      },
       "args": [
         "--extensionDevelopmentPath=${workspaceRoot}",
         "--disable-extensions"
