--- a/packages/vscode-extension/.vscode/launch.json
+++ b/packages/vscode-extension/.vscode/launch.json
@@ -1,16 +1,16 @@
 // A launch configuration that compiles the extension and then opens it inside a new window
 {
   "version": "0.2.0",
-  "compounds": [
-    {
-      "name": "Compound",
-      "configurations": [
-        "Launch Extension",
-        "Attach to VS Code TS Server"
-      ],
-      "preLaunchTask": "npm: build:tsc:watch"
-    }
-  ],
+  // "compounds": [
+  //   {
+  //     "name": "Compound",
+  //     "configurations": [
+  //       "Launch Extension",
+  //       "Attach to VS Code TS Server"
+  //     ],
+  //     "preLaunchTask": "npm: build:tsc:watch"
+  //   }
+  // ],
   "configurations": [
     {
       "type": "extensionHost",
@@ -24,7 +24,7 @@
       },
       "args": [
         "--extensionDevelopmentPath=${workspaceRoot}",
-        "--disable-extensions"
+        // "--disable-extensions"
       ],
       "outFiles": [
         "${workspaceRoot}/build/**/*.js",
