--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -109,6 +109,7 @@
     "onStartupFinished"
   ],
   "dependencies": {
+    "@effect/experimental": "0.14.12",
     "@effect/schema": "^0.64.20",
     "@native-twin/ts-plugin": "workspace:*",
     "effect": "^2.4.18",
