feat(vscode): Language client provider

--- a/packages/vscode-extension/.vscode/launch.json
+++ b/packages/vscode-extension/.vscode/launch.json
@@ -24,7 +24,7 @@
       },
       "args": [
         "--extensionDevelopmentPath=${workspaceRoot}",
-        // "--disable-extensions"
+        "--disable-extensions"
       ],
       "outFiles": [
         "${workspaceRoot}/build/**/*.js",
