--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -111,6 +111,7 @@
   "dependencies": {
     "@effect/schema": "^0.64.20",
     "@native-twin/ts-plugin": "workspace:*",
+    "clear-module": "4.1.2",
     "effect": "^2.4.18",
     "vscode-languageclient": "^9.0.1",
     "vscode-languageserver": "^9.0.1",
