--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -103,6 +103,12 @@
           }
         }
       }
+    ],
+    "typescriptServerPlugins": [
+      {
+        "name": "@native-twin/ts-plugin",
+        "enableForWorkspaceTypeScriptVersions": true
+      }
     ]
   },
   "activationEvents": [
