--- a/packages/ts-plugin/.eslintrc.json
+++ b/packages/ts-plugin/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "extends": "../../.eslintrc.json",
-  "ignorePatterns": ["!**/*"],
+  "ignorePatterns": ["!**/*", "**/test/project-fixture/**/*"],
   "overrides": [
     {
       "files": [
