--- a/packages/arc-parser/.eslintrc.json
+++ b/packages/arc-parser/.eslintrc.json
@@ -9,7 +9,9 @@
       "extends": [
         "plugin:@nx/typescript"
       ],
-      "rules": {}
+      "rules": {
+        "@typescript-eslint/no-explicit-any": "off"
+      }
     }
   ]
 }
