--- a/packages/ts-plugin/.eslintrc.json
+++ b/packages/ts-plugin/.eslintrc.json
@@ -14,7 +14,10 @@
         "@typescript-eslint/no-explicit-any": "off",
         "@typescript-eslint/no-non-null-assertion": "off",
         "@typescript-eslint/ban-types": "off",
-        "@typescript-eslint/no-empty-interface": "off"
+        "@typescript-eslint/no-empty-interface": "off",
+        "@typescript-eslint/no-unused-vars": ["warn",{
+          "argsIgnorePattern": "^_"
+        }]
       }
     }
   ]
