--- a/packages/ts-plugin/.vscode/launch.json
+++ b/packages/ts-plugin/.vscode/launch.json
@@ -24,6 +24,7 @@
       "runtimeArgs": [
         "--inspect-brk",
         "../../node_modules/.bin/jest",
+        "--watch"
       ],
       "console": "integratedTerminal",
       "env": {
