feat(vscode): Language service implementation

--- a/packages/vscode-extension/.vscode/launch.json
+++ b/packages/vscode-extension/.vscode/launch.json
@@ -36,9 +36,9 @@
         "${workspaceFolder}/../**",
         "!**/node_modules/**"
       ],
-      "sourceMapPathOverrides": {
-        "📦 @lib/ts-plugin": "${workspaceFolder}../ts-plugin/*"
-      }
+      // "sourceMapPathOverrides": {
+      //   "📦 @lib/ts-plugin": "${workspaceFolder}../ts-plugin/*"
+      // }
     }
   ],
 }
