feat(vscode): Language server package

--- a/packages/language-server/package.json
+++ b/packages/language-server/package.json
@@ -1,32 +1,34 @@
 {
-  "name": "@native-twin/ts-plugin",
+  "name": "@native-twin/language-server",
   "version": "5.0.5",
-  "description": "TypeScript plugin that adds IntelliSense Native Tailwind",
+  "description": "Native Twin language server provider",
   "license": "MIT",
   "author": "Cristhian Gutierrez",
   "main": "build/index.js",
   "scripts": {
-    "build": "tsc -p tsconfig.build.json",
-    "build:tsc:watch": "tsc -p tsconfig.build.json -w",
-    "circular": "madge --extensions ts --circular --no-color --no-spinner --warning src",
+    "build": "node ./build.js --production",
+    "build:tsc": "tsc -b",
+    "build:tsc:watch": "tsc -b -w",
     "clean": "rm -rf build",
-    "esbuild:build": "node ./build.js --production",
     "lint": "eslint . --ext .ts,.tsx",
-    "test": "jest",
+    "test": "echo \"TEST\"",
     "vscode:dev": "tsc -p tsconfig.build.json -w"
   },
   "dependencies": {
     "@ctrl/tinycolor": "^4.1.0",
-    "@native-twin/core": "workspace:*",
-    "@native-twin/css": "workspace:*",
-    "@native-twin/helpers": "workspace:*",
-    "@native-twin/preset-tailwind": "workspace:*",
+    "@vscode/emmet-helper": "^2.9.3",
+    "cssbeautify": "0.3.1",
     "effect": "^3.0.7",
-    "typescript-template-language-service-decorator": "2.3.2",
+    "match-sorter": "6.3.4",
+    "showdown": "2.1.0",
+    "ts-morph": "^22.0.0",
     "vscode-css-languageservice": "6.2.6",
+    "vscode-languageserver": "^9.0.1",
     "vscode-languageserver-textdocument": "^1.0.11"
   },
   "devDependencies": {
+    "@types/cssbeautify": "^0.3.5",
+    "@types/showdown": "^2.0.6",
     "madge": "7.0.0"
   },
   "optionalDependencies": {
