--- a/packages/vscode-extension/.vscode/launch.json
+++ b/packages/vscode-extension/.vscode/launch.json
@@ -3,10 +3,18 @@
   "version": "0.2.0",
   "compounds": [
     {
-      "name": "Compound",
+      "name": "Lanuch extension + TS Plugin",
       "configurations": [
         "Launch Extension",
         "Attach to VS Code TS Server"
+      ],
+      "preLaunchTask": "npm: build:tsc:watch"
+    },
+    {
+      "name": "Lanuch extension Client + Server",
+      "configurations": [
+        "Launch Extension",
+        "Launch Extension Server"
       ],
       "preLaunchTask": "npm: build:tsc:watch"
     }
