--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -116,9 +116,9 @@
     "vscode-languageclient": "^9.0.1"
   },
   "devDependencies": {
-    "@types/vscode": "1.80.0",
-    "@vscode/test-electron": "^2.3.3",
-    "vscode-test": "1.6.1"
+    "@types/vscode": "^1.88.0",
+    "@vscode/test-electron": "^2.3.9",
+    "vscode-test": "^1.6.1"
   },
   "engines": {
     "vscode": "^1.80.0"
