feat(vscode): Completions order

--- a/packages/babel/.vscode/launch.json
+++ b/packages/babel/.vscode/launch.json
@@ -5,6 +5,11 @@
       "name": "Debug Jest Tests",
       "type": "node",
       "request": "launch",
+      "presentation": {
+        "hidden": false,
+        "group": "tools",
+        "order": 10
+      },
       "runtimeArgs": [
         "--inspect-brk",
         "../../node_modules/.bin/jest",
