--- a/packages/language-server/.vscode/launch.json
+++ b/packages/language-server/.vscode/launch.json
@@ -7,6 +7,11 @@
       "type": "node",
       "request": "attach",
       "sourceMaps": true,
+      "presentation": {
+        "hidden": true,
+        "group": "",
+        "order": 1
+      },
       "preLaunchTask": {
         "type": "npm",
         "script": "build:tsc:watch"
