feat(vscode): Completions provider RC.1

--- a/packages/vscode-extension/.vscode/settings.json
+++ b/packages/vscode-extension/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
   "typescript.tsc.autoDetect": "off",
-  "typescript.tsdk": "node_modules/typescript/lib"
+  "typescript.tsdk": "node_modules/typescript/lib",
 }
