feat(LSP): LSP document parser with babel

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -52,7 +52,9 @@
               "css",
               "variants",
               "styled",
-              "tx"
+              "tx",
+              "style",
+              "createVariants"
             ]
           },
           "nativeTwin.attributes": {
