--- a/packages/language-server/package.json
+++ b/packages/language-server/package.json
@@ -6,7 +6,7 @@
   "author": "Cristhian Gutierrez",
   "main": "build/index.js",
   "scripts": {
-    "build": "node ./build.js --production",
+    "build": "tsc -b",
     "build:tsc": "tsc -b",
     "build:tsc:watch": "tsc -b -w",
     "clean": "rm -rf build",
