feat(LSP): document diagnostic
feat(LSP): document diagnostic

feat(LSP): document diagnostic

feat(LSP): Testing

feat(LSP): Testing extension

feat(LSP): Testing up

feat(workspace): testing runners

--- a/nx.json
+++ b/nx.json
@@ -31,6 +31,7 @@
       "cache": false
     },
     "build": {
+      "cache": true,
       "inputs": [
         "production"
       ],
@@ -44,6 +45,11 @@
     },
     "build:libs": {
       "cache": true
+    },
+    "test": {
+      "dependsOn": [
+        "^build"
+      ]
     }
   },
   "namedInputs": {
