--- a/packages/vscode-extension/.eslintrc.json
+++ b/packages/vscode-extension/.eslintrc.json
@@ -2,7 +2,9 @@
   "extends": "../../.eslintrc.json",
   "ignorePatterns": [
     "!**/*",
-    "ts-extension"
+    "ts-extension",
+    "project-fixture",
+    ".vscode-test.mjs"
   ],
   "overrides": [
     {
