--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -18,7 +18,8 @@
     "build:tsc:watch": "tsc -b -w",
     "clean": "rm -rf build",
     "lint": "eslint . --ext .ts,.tsx",
-    "test": "echo \"TEST\"",
+    "vsc-test": "vscode-test --watch",
+    "vsc:test": "sh ./scripts/e2e.sh",
     "vscode:dev": "tsc -b -w",
     "vscode:prepublish": "node ./build.js"
   },
@@ -118,12 +119,13 @@
     "vscode-languageclient": "^9.0.1"
   },
   "devDependencies": {
-    "@types/vscode": "^1.88.0",
-    "@vscode/test-electron": "^2.3.9",
+    "@types/vscode": "^1.89.0",
+    "@vscode/test-cli": "^0.0.9",
+    "@vscode/test-electron": "^2.4.0",
     "vscode-test": "^1.6.1"
   },
   "engines": {
-    "vscode": "^1.80.0"
+    "vscode": "^1.89.0"
   },
   "publishConfig": {
     "access": "public",
