--- a/packages/builder/tsconfig.build.json
+++ b/packages/builder/tsconfig.build.json
@@ -4,8 +4,7 @@
     "rootDir": "src",
     "outDir": "build",
     "noEmit": false,
-    "module": "CommonJS",
+    "module": "ESNext",
     "declarationMap": true
-  },
-  "exclude": ["./test/"]
+  }
 }
