--- a/packages/language-server/package.json
+++ b/packages/language-server/package.json
@@ -5,14 +5,18 @@
   "license": "MIT",
   "author": "Cristhian Gutierrez",
   "main": "build/index.js",
+  "bin": {
+    "native-twin-language-server": "./bin/native-twin-language-server"
+  },
   "scripts": {
-    "build": "tsc -b",
-    "build:tsc": "tsc -b",
-    "build:tsc:watch": "tsc -b -w",
+    "build": "tsc -p tsconfig.build.json",
+    "build:tsc": "tsc -p tsconfig.build.json",
+    "build:tsc:watch": "tsc -p tsconfig.build.json --watch",
+    "build:watch": "node esbuild.mjs --watch",
     "clean": "rm -rf build",
     "lint": "eslint . --ext .ts,.tsx",
-    "test": "echo \"TEST\"",
-    "vscode:dev": "tsc -p tsconfig.build.json -w"
+    "test": "jest --passWithNoTests",
+    "vscode:dev": "tsc -p tsconfig.build.json --watch"
   },
   "dependencies": {
     "@ctrl/tinycolor": "^4.1.0",
@@ -24,6 +28,7 @@
     "ts-morph": "^22.0.0",
     "vscode-css-languageservice": "^6.2.14",
     "vscode-languageserver": "^9.0.1",
+    "vscode-languageserver-protocol": "^3.17.5",
     "vscode-languageserver-textdocument": "^1.0.11",
     "vscode-languageserver-types": "^3.17.5"
   },
@@ -34,6 +39,9 @@
   },
   "optionalDependencies": {
     "jest": "*"
+  },
+  "engines": {
+    "vscode": "^1.89.0"
   },
   "publishConfig": {
     "access": "public",
