--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "build": "nx run-many -t build",
     "build:release": "yarn build && yarn libs:foreach pack && yarn libs:foreach exec \"mkdir _release && tar zxvf package.tgz --directory _release && rm package.tgz\"",
     "build:watch": "nx run-many -t build:watch",
+    "clean": "rimraf -g packages/*/build",
     "docs:build": "nx run -t docs:build",
     "example:expo": "yarn workspace expo-app run start",
     "extension:dev": "nx run-many -t vscode:dev",
@@ -64,6 +65,7 @@
     "nx": "18.2.2",
     "prettier": "^3.2.5",
     "react-test-renderer": "18.2.0",
+    "rimraf": "^5.0.7",
     "tslib": "^2.6.2",
     "typescript": "^5.4.2"
   },
