--- a/packages/vscode-extension/.eslintrc.json
+++ b/packages/vscode-extension/.eslintrc.json
@@ -4,7 +4,8 @@
     "!**/*",
     "ts-extension",
     "project-fixture",
-    ".vscode-test.mjs"
+    ".vscode-test.mjs",
+    ".vscode-test"
   ],
   "overrides": [
     {
