--- a/packages/babel/package.json
+++ b/packages/babel/package.json
@@ -2,6 +2,15 @@
   "name": "@native-twin/babel",
   "version": "1.0.4",
   "description": "Native Twin babel plugin",
+  "homepage": "https://github.com/react-universal/native-twin#readme",
+  "bugs": {
+    "url": "https://github.com/react-universal/native-twin/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/react-universal/native-twin",
+    "directory": "packages/babel"
+  },
   "license": "MIT",
   "author": "Cristhian Gutierrez",
   "sideEffects": false,
