--- a/packages/jsx/package.json
+++ b/packages/jsx/package.json
@@ -2,6 +2,15 @@
   "name": "@native-twin/jsx",
   "version": "1.0.4",
   "description": "Native Twin JSX runtime",
+  "homepage": "https://github.com/react-universal/native-twin#readme",
+  "bugs": {
+    "url": "https://github.com/react-universal/native-twin/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/react-universal/native-twin",
+    "directory": "packages/jsx"
+  },
   "license": "MIT",
   "author": "Cristhian Gutierrez",
   "sideEffects": false,
