--- a/packages/metro/package.json
+++ b/packages/metro/package.json
@@ -2,6 +2,15 @@
   "name": "@native-twin/metro",
   "version": "1.0.4",
   "description": "Native Twin metro transformer",
+  "homepage": "https://github.com/react-universal/native-twin#readme",
+  "bugs": {
+    "url": "https://github.com/react-universal/native-twin/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/react-universal/native-twin",
+    "directory": "packages/metro"
+  },
   "license": "MIT",
   "author": "Cristhian Gutierrez",
   "sideEffects": false,
