feat(workspace): fix build process and pkg config

--- a/packages/preset-tailwind/.eslintrc.json
+++ b/packages/preset-tailwind/.eslintrc.json
@@ -10,7 +10,8 @@
         "plugin:@nx/typescript"
       ],
       "rules": {
-        "no-useless-escape": "off"
+        "no-useless-escape": "off",
+        "@typescript-eslint/no-explicit-any": "off"
       }
     }
   ]
