feat(workspace): fix build process and pkg config

--- a/packages/arc-parser/.eslintrc.json
+++ b/packages/arc-parser/.eslintrc.json
@@ -10,7 +10,12 @@
         "plugin:@nx/typescript"
       ],
       "rules": {
-        "@typescript-eslint/no-explicit-any": "off"
+        "@typescript-eslint/no-explicit-any": "off",
+        "@typescript-eslint/no-unused-vars": [
+          "warn", {
+            "destructuredArrayIgnorePattern": "_"
+          }
+        ]
       }
     }
   ]
