break(packages): V6 ready to deploy

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -14,6 +14,7 @@
       "@native-twin/ts-plugin",
       "@native-twin/jsx",
       "@native-twin/babel",
+      "@native-twin/metro",
       "@native-twin/language-server"
     ]
   ],
