break(packages): V6 ready to deploy

--- a/packages/styled/package.json
+++ b/packages/styled/package.json
@@ -64,8 +64,5 @@
     "access": "public",
     "directory": "_release/package"
   },
-  "gitHead": "4c26121d296e38153faa7dd196229db1a71e075d",
-  "nx": {
-    "includedScripts": []
-  }
+  "gitHead": "4c26121d296e38153faa7dd196229db1a71e075d"
 }
