--- a/packages/native-twin/package.json
+++ b/packages/native-twin/package.json
@@ -31,7 +31,8 @@
     "types.d.ts",
     "LICENSE",
     "README.md",
-    "CHANGELOG.md"
+    "CHANGELOG.md",
+    "expo-snack.js"
   ],
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
