--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,7 @@
           "error",
           {
             "enforceBuildableLibDependency": true,
-            "allow": ["/*test/*/"],
+            "allow": ["/*test/*/", "/*expo-snack.js"],
             "depConstraints": [
               {
                 "sourceTag": "*",
