--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@native-twin/vscode",
+  "name": "native-twin-vscode",
   "version": "1.0.0",
   "private": true,
   "description": "Native Twin vscode extension.",
@@ -22,7 +22,7 @@
   "publisher": "native-twin",
   "main": "./build/extension.js",
   "scripts": {
-    "build": "node ./build.js --production",
+    "build": "node ./esbuild.mjs",
     "build:tsc": "tsc -b",
     "build:tsc:watch": "tsc -b -w",
     "clean": "rm -rf build",
@@ -30,7 +30,7 @@
     "vsc-test": "vscode-test --watch",
     "vsc:test": "sh ./scripts/e2e.sh",
     "vscode:dev": "tsc -b -w",
-    "vscode:prepublish": "node ./build.js"
+    "vscode:prepublish": "node ./esbuild.mjs"
   },
   "contributes": {
     "commands": [
