break(LSP): Color modifier fix
break(LSP): Color modifier fix

break(web): Web integration upgrade

break(web): Web integration upgrade

--- a/apps/expo-app/tsconfig.json
+++ b/apps/expo-app/tsconfig.json
@@ -7,20 +7,13 @@
     "allowJs": true,
     "module": "ESNext",
     "resolveJsonModule": true,
-    "noEmit": true,
-    "plugins": [
-      {
-        "name": "@native-twin/ts-plugin"
-      }
-    ]
+    "noEmit": true
   },
-  "references": [],
   "exclude": [
     "node_modules",
     ".expo",
     "android",
     "ios",
-    ".turbo",
     "babel.config.js",
     "app.config.js",
     "metro.config.js"
