--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "format": "prettier --write packages apps examples \"**/*.{js,ts,tsx,md}\"",
     "libs:foreach": "yarn workspaces foreach --all --no-private --verbose",
     "lint": "nx run-many -t lint",
+    "nextjs:pages:dev": "nx run -t nextjs:pages:dev",
     "release": "yarn build:release && changeset publish",
     "test": "nx run-many -t test"
   },
