--- a/apps/next-app/tsconfig.json
+++ b/apps/next-app/tsconfig.json
@@ -5,6 +5,7 @@
     "allowJs": true,
     "esModuleInterop": true,
     "module": "ESNext",
+    "jsxImportSource": "@native-twin/jsx",
     "allowSyntheticDefaultImports": true,
     "strict": false,
     "sourceMap": true,
