--- a/packages/language-server/.eslintrc.json
+++ b/packages/language-server/.eslintrc.json
@@ -17,6 +17,7 @@
       "rules": {
         "@typescript-eslint/no-empty-function": "off",
         "require-yield": "off",
+        "@typescript-eslint/ban-ts-comment": "off",
         "@typescript-eslint/no-explicit-any": "off",
         "@typescript-eslint/no-empty-interface": "off",
         "@typescript-eslint/ban-types": "off",
