--- a/packages/native-twin-nextjs/tsconfig.json
+++ b/packages/native-twin-nextjs/tsconfig.json
@@ -7,6 +7,7 @@
     "strictFunctionTypes": false,
     "strictNullChecks": true,
     "noImplicitReturns": false,
+    "declarationMap": true,
     "resolveJsonModule": true,
     "noEmit": true,
     "strict": true,
