--- a/apps/next-app-dir/package.json
+++ b/apps/next-app-dir/package.json
@@ -13,12 +13,13 @@
     "@native-twin/nextjs": "workspace:*",
     "@native-twin/preset-tailwind": "workspace:*",
     "@native-twin/styled": "workspace:*",
-    "next": "^14.1.4",
+    "next": "^14.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native-web": "^0.19.6"
   },
   "devDependencies": {
+    "tslib": "^2.6.3",
     "typescript": "^5.4.2"
   }
 }
