--- a/package.json
+++ b/package.json
@@ -13,19 +13,19 @@
     "apps/*"
   ],
   "scripts": {
-    "build": "nx run-many -t build",
+    "build": "turbo run build",
     "build:release": "yarn build && yarn libs:foreach pack && yarn libs:foreach exec \"mkdir _release && tar zxvf package.tgz --directory _release && rm package.tgz\"",
-    "build:watch": "nx run-many -t build:watch",
+    "build:watch": "turbo run build:watch",
     "clean": "rimraf -g packages/*/build",
-    "docs:build": "nx run -t docs:build",
+    "docs:build": "turbo run docs:build",
     "example:expo": "yarn workspace expo-app run start",
-    "extension:dev": "nx run-many -t vscode:dev",
+    "extension:dev": "turbo run vscode:dev",
     "format": "prettier --write packages apps examples \"**/*.{js,ts,tsx,md}\"",
     "libs:foreach": "yarn workspaces foreach --all --no-private --verbose",
-    "lint": "nx run-many -t lint",
-    "nextjs:pages:dev": "nx run -t nextjs:pages:dev",
+    "lint": "turbo run lint",
+    "nextjs:pages:dev": "turbo run nextjs:pages:dev",
     "release": "yarn build:release && changeset publish",
-    "test": "nx run-many -t test"
+    "test": "turbo run test"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.0",
