--- a/packages/native-twin/package.json
+++ b/packages/native-twin/package.json
@@ -53,6 +53,9 @@
     "react": ">=18.0",
     "react-native": ">=0.71.0"
   },
+  "optionalDependencies": {
+    "jest": "*"
+  },
   "publishConfig": {
     "access": "public",
     "directory": "_release/package"
