--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -21,7 +21,7 @@
   "access": "public",
   "baseBranch": "main",
   "updateInternalDependencies": "patch",
-  "ignore": ["next-pages-example", "expo-app", "site", "@native-twin/vscode"],
+  "ignore": ["next-pages-example", "expo-app", "native-twin-vscode"],
   "___experimentalUnsafeOptions_WILL_CHANGE_IN_PATCH": {
     "onlyUpdatePeerDependentsWhenOutOfRange": true
   }
