--- a/sites/twin.run/package.json
+++ b/sites/twin.run/package.json
@@ -56,6 +56,7 @@
     "@native-twin/core": "^6.1.0",
     "@native-twin/css": "^6.1.0",
     "@native-twin/language-server": "^6.1.0",
+    "@native-twin/language-service": "file:../../packages/language-service",
     "@native-twin/preset-tailwind": "^6.1.0",
     "@typefox/monaco-editor-react": "^4.2.0",
     "effect": "~3.3.0",
@@ -76,6 +77,7 @@
     "vscode-ws-jsonrpc": "~3.3.2"
   },
   "devDependencies": {
+    "@entur/vite-plugin-assets-json": "^0.0.9",
     "@rollup/pluginutils": "^5.1.0",
     "@types/express": "^4",
     "@types/react": "^18",
