--- a/packages/vscode-extension/.vscode/launch.json
+++ b/packages/vscode-extension/.vscode/launch.json
@@ -6,7 +6,7 @@
       "name": "Lanuch extension + TS Plugin",
       "configurations": [
         "Launch Extension",
-        "Attach to VS Code TS Server"
+        "Launch Extension Server"
       ],
       "presentation": {
         "hidden": false,
