--- a/apps/next-app-dir/package.json
+++ b/apps/next-app-dir/package.json
@@ -19,6 +19,7 @@
     "react-native-web": "^0.19.6"
   },
   "devDependencies": {
+    "babel-loader": "^9.1.3",
     "tslib": "^2.6.3",
     "typescript": "^5.4.2"
   }
