--- a/packages/styled/package.json
+++ b/packages/styled/package.json
@@ -33,6 +33,7 @@
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
     "build:watch": "tsc -p tsconfig.build.json -w",
+    "bundle": "yarn clean && yarn twin-build",
     "clean": "rm -rf build",
     "dev": "tsc -p tsconfig.build.json --watch --preserveWatchOutput",
     "lint": "eslint \"./**/*.{ts,tsx}\"",
@@ -48,6 +49,7 @@
     "stable-hash": "0.0.3"
   },
   "devDependencies": {
+    "@native-twin/builder": "workspace:*",
     "@types/react": "^18.2.64",
     "@types/react-dom": "18.0.10",
     "@types/react-is": "^17.0.3"
