--- a/sites/twin.run/package.json
+++ b/sites/twin.run/package.json
@@ -7,66 +7,35 @@
     "build": "tsc && vite build",
     "build:tsc": "tsc -p tsconfig.build.json",
     "dev": "vite",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "node --loader ts-node/esm src/server/direct.ts"
   },
   "dependencies": {
     "@codingame/esbuild-import-meta-url-plugin": "^1.0.2",
-    "@codingame/monaco-vscode-authentication-service-override": "~5.2.0",
-    "@codingame/monaco-vscode-configuration-editing-default-extension": "~5.2.0",
-    "@codingame/monaco-vscode-configuration-service-override": "~5.2.0",
-    "@codingame/monaco-vscode-css-default-extension": "~5.2.0",
-    "@codingame/monaco-vscode-css-language-features-default-extension": "~5.2.0",
-    "@codingame/monaco-vscode-dialogs-service-override": "~5.2.0",
-    "@codingame/monaco-vscode-editor-service-override": "~5.2.0",
-    "@codingame/monaco-vscode-emmet-default-extension": "~5.2.0",
-    "@codingame/monaco-vscode-explorer-service-override": "~5.2.0",
-    "@codingame/monaco-vscode-extension-gallery-service-override": "~5.2.0",
-    "@codingame/monaco-vscode-html-default-extension": "~5.2.0",
-    "@codingame/monaco-vscode-html-language-features-default-extension": "~5.2.0",
-    "@codingame/monaco-vscode-javascript-default-extension": "~5.2.0",
-    "@codingame/monaco-vscode-json-default-extension": "~5.2.0",
-    "@codingame/monaco-vscode-json-language-features-default-extension": "~5.2.0",
-    "@codingame/monaco-vscode-keybindings-service-override": "~5.2.0",
-    "@codingame/monaco-vscode-lifecycle-service-override": "~5.2.0",
-    "@codingame/monaco-vscode-monarch-service-override": "~5.2.0",
-    "@codingame/monaco-vscode-notebook-service-override": "~5.2.0",
-    "@codingame/monaco-vscode-notifications-service-override": "~5.2.0",
-    "@codingame/monaco-vscode-npm-default-extension": "~5.2.0",
-    "@codingame/monaco-vscode-outline-service-override": "~5.2.0",
-    "@codingame/monaco-vscode-output-service-override": "~5.2.0",
-    "@codingame/monaco-vscode-references-view-default-extension": "~5.2.0",
-    "@codingame/monaco-vscode-rollup-vsix-plugin": "~5.2.0",
-    "@codingame/monaco-vscode-scss-default-extension": "~5.2.0",
-    "@codingame/monaco-vscode-secret-storage-service-override": "~5.2.0",
-    "@codingame/monaco-vscode-standalone-css-language-features": "~5.2.0",
-    "@codingame/monaco-vscode-standalone-html-language-features": "~5.2.0",
-    "@codingame/monaco-vscode-standalone-json-language-features": "~5.2.0",
-    "@codingame/monaco-vscode-standalone-languages": "~5.2.0",
-    "@codingame/monaco-vscode-standalone-typescript-language-features": "~5.2.0",
-    "@codingame/monaco-vscode-storage-service-override": "~5.2.0",
-    "@codingame/monaco-vscode-textmate-service-override": "~5.2.0",
-    "@codingame/monaco-vscode-theme-defaults-default-extension": "~5.2.0",
-    "@codingame/monaco-vscode-theme-service-override": "~5.2.0",
-    "@codingame/monaco-vscode-theme-seti-default-extension": "~5.2.0",
-    "@codingame/monaco-vscode-typescript-basics-default-extension": "~5.2.0",
-    "@codingame/monaco-vscode-typescript-language-features-default-extension": "~5.2.0",
-    "@codingame/monaco-vscode-views-service-override": "~5.2.0",
-    "@codingame/monaco-vscode-workbench-service-override": "~5.2.0",
-    "@codingame/monaco-vscode-working-copy-service-override": "~5.2.0",
+    "@codingame/monaco-vscode-api": "5.2.0",
+    "@codingame/monaco-vscode-editor-api": "5.2.0",
+    "@codingame/monaco-vscode-lifecycle-service-override": "5.2.0",
+    "@codingame/monaco-vscode-npm-default-extension": "5.2.0",
+    "@codingame/monaco-vscode-rollup-vsix-plugin": "^6.0.1",
+    "@codingame/monaco-vscode-standalone-languages": "5.2.0",
+    "@codingame/monaco-vscode-standalone-typescript-language-features": "5.2.0",
+    "@codingame/monaco-vscode-typescript-basics-default-extension": "5.2.0",
+    "@codingame/monaco-vscode-typescript-language-features-default-extension": "5.2.0",
     "@native-twin/core": "^6.1.0",
     "@native-twin/css": "^6.1.0",
-    "@native-twin/language-server": "^6.1.0",
     "@native-twin/language-service": "file:../../packages/language-service",
     "@native-twin/preset-tailwind": "^6.1.0",
-    "@typefox/monaco-editor-react": "^4.2.0",
+    "@rollup/browser": "^4.18.0",
     "effect": "~3.3.0",
+    "esbuild-plugin-wasm": "^1.1.0",
     "jiti": "^1.21.3",
     "monaco-editor": "npm:@codingame/monaco-vscode-editor-api@~5.2.0",
-    "monaco-editor-wrapper": "^5.2.0",
+    "monaco-editor-wrapper": "5.2.0",
     "monaco-languageclient": "^8.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sucrase": "^3.35.0",
+    "systemjs": "^6.15.1",
     "vscode": "npm:@codingame/monaco-vscode-api@~5.2.0",
     "vscode-json-languageservice": "^5.3.11",
     "vscode-languageclient": "~9.0.1",
@@ -77,11 +46,13 @@
     "vscode-ws-jsonrpc": "~3.3.2"
   },
   "devDependencies": {
+    "@chialab/esbuild-plugin-meta-url": "^0.18.2",
     "@entur/vite-plugin-assets-json": "^0.0.9",
     "@rollup/pluginutils": "^5.1.0",
     "@types/express": "^4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/systemjs": "^6",
     "@types/vscode": "^1.89.0",
     "@types/ws": "^8",
     "eslint": "^8.57.0",
@@ -93,9 +64,10 @@
     "express": "^4.19.2",
     "prettier": "^3.3.1",
     "request-light": "^0.7.0",
+    "ts-node": "^10.9.2",
     "tslib": "^2.6.3",
     "typescript": "^5.4.2",
-    "vite": "^5.2.0",
+    "vite": "^5.3.1",
     "ws": "^8.17.0"
   },
   "packageManager": "yarn@4.2.2"
