break(babel): Babel Layers

--- a/packages/babel/.eslintrc.json
+++ b/packages/babel/.eslintrc.json
@@ -9,7 +9,9 @@
       "extends": [
         "plugin:@nx/typescript"
       ],
-      "rules": {}
+      "rules": {
+        "require-yield": "off"
+      }
     }
   ]
 }
