--- a/apps/expo-app/package.json
+++ b/apps/expo-app/package.json
@@ -10,27 +10,31 @@
     "start": "expo start -c"
   },
   "dependencies": {
+    "@native-twin/babel": "workspace:*",
     "@native-twin/core": "workspace:*",
     "@native-twin/jsx": "workspace:*",
     "@native-twin/metro": "workspace:*",
     "@native-twin/preset-tailwind": "workspace:*",
     "@native-twin/styled": "workspace:*",
-    "expo": "50.0.11",
-    "expo-build-properties": "~0.11.1",
-    "expo-font": "~11.10.3",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^51.0.17",
+    "expo-build-properties": "~0.12.3",
+    "expo-font": "~12.0.7",
+    "expo-status-bar": "~1.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "0.73.4",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-svg": "14.1.0",
+    "react-native": "0.74.2",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-pager-view": "6.3.0",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-svg": "15.2.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-uuid": "^2.0.1",
-    "react-native-web": "^0.19.6"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
-    "@types/react": "^18.2.64",
-    "@types/react-dom": "18.0.10",
+    "@types/react": "~18.2.79",
+    "@types/react-dom": "~18.2.25",
     "sharp-cli": "2.1.0",
-    "typescript": "^5.4.2"
+    "typescript": "~5.3.3"
   }
 }
