--- a/apps/next-app-dir/package.json
+++ b/apps/next-app-dir/package.json
@@ -16,11 +16,11 @@
     "next": "^14.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-native-web": "^0.19.6"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "babel-loader": "^9.1.3",
     "tslib": "^2.6.3",
-    "typescript": "^5.4.2"
+    "typescript": "~5.3.3"
   }
 }
