--- a/apps/next-app/package.json
+++ b/apps/next-app/package.json
@@ -17,7 +17,7 @@
     "next": "^14.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-native-web": "^0.19.6"
+    "react-native-web": "~0.19.10"
   },
   "nx": {
     "targets": "nextjs:pages:dev",
