--- a/package.json
+++ b/package.json
@@ -55,15 +55,15 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unused-imports": "^3.1.0",
     "glob": "^8.1.0",
-    "jest": "^29.3.1",
-    "jest-expo": "^49.0.0",
+    "jest": "^29.7.0",
+    "jest-expo": "^51.0.3",
     "mocha": "^10.2.0",
     "prettier": "^3.2.5",
     "react-test-renderer": "18.2.0",
     "rimraf": "^5.0.7",
     "tslib": "^2.6.3",
     "turbo": "^2.0.3",
-    "typescript": "^5.4.2"
+    "typescript": "~5.3.3"
   },
   "packageManager": "yarn@4.2.2",
   "overrides": {
