--- a/packages/builder/package.json
+++ b/packages/builder/package.json
@@ -31,7 +31,7 @@
     "@effect/printer-ansi": "0.32.25",
     "@effect/schema": "^0.66.10",
     "@effect/typeclass": "0.23.16",
-    "effect": "^3.0.7",
+    "effect": "3.4.5",
     "esbuild": "^0.20.2",
     "fs-extra": "11.2.0",
     "minimist": "^1.2.8"
