--- a/packages/jsx/tsconfig.build.json
+++ b/packages/jsx/tsconfig.build.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "rootDir": "src",
     "outDir": "build",
+    "importHelpers": false,
     "noEmit": false,
     "sourceMap": true
   },
