--- a/packages/language-server/package.json
+++ b/packages/language-server/package.json
@@ -33,7 +33,7 @@
     "@native-twin/preset-tailwind": "workspace:*",
     "@vscode/emmet-helper": "^2.9.3",
     "cssbeautify": "0.3.1",
-    "effect": "^3.0.7",
+    "effect": "3.4.5",
     "match-sorter": "6.3.4",
     "showdown": "2.1.0",
     "ts-morph": "^22.0.0",
