fix(workspace): Dark mode support

--- a/packages/language-service/.eslintrc.json
+++ b/packages/language-service/.eslintrc.json
@@ -17,10 +17,12 @@
       "rules": {
         "@typescript-eslint/no-empty-function": "off",
         "require-yield": "off",
+        "prefer-const": "off",
         "@typescript-eslint/ban-ts-comment": "off",
         "@typescript-eslint/no-explicit-any": "off",
         "@typescript-eslint/no-empty-interface": "off",
         "@typescript-eslint/ban-types": "off",
+        "@typescript-eslint/no-non-null-assertion": "off",
         "@typescript-eslint/no-unused-vars": [
           "error",
           {
