--- a/packages/language-service/tsconfig.json
+++ b/packages/language-service/tsconfig.json
@@ -21,5 +21,5 @@
     "esbuild.mjs",
     "ts-extension"
   ],
-  "include": ["src", "test", "./*.d.ts"]
+  "include": ["src", "tests", "./*.d.ts"]
 }
