fix(native-twin): media queries fix

--- a/apps/expo-app/app.json
+++ b/apps/expo-app/app.json
@@ -32,12 +32,7 @@
     },
     "plugins": [
       [
-        "expo-build-properties",
-        {
-          "ios": {
-            "flipper": true
-          }
-        }
+        "expo-build-properties"
       ],
       "expo-font"
     ]
