--- a/apps/expo-app/package.json
+++ b/apps/expo-app/package.json
@@ -19,6 +19,7 @@
     "expo": "^51.0.17",
     "expo-build-properties": "~0.12.3",
     "expo-font": "~12.0.7",
+    "expo-image": "~1.12.12",
     "expo-status-bar": "~1.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
