fix(workspace): testing config

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@types/glob": "^8.1.0",
     "@types/jest": "^29.5.1",
     "@types/mocha": "^10.0.1",
-    "@types/node": "20.2.5",
+    "@types/node": "^20.14.10",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^7.5.0",
     "@typescript-eslint/parser": "^7.5.0",
@@ -61,6 +61,7 @@
     "prettier": "^3.2.5",
     "react-test-renderer": "18.2.0",
     "rimraf": "^5.0.7",
+    "ts-node": "^10.9.2",
     "tslib": "^2.6.3",
     "turbo": "^2.0.6",
     "typescript": "~5.3.3"
