--- a/packages/native-twin/tsconfig.json
+++ b/packages/native-twin/tsconfig.json
@@ -13,9 +13,6 @@
     "stripInternal": true,
     "noImplicitAny": true
   },
-  "include": [
-    "src/**/*",
-    "test/**/*"
-  ],
-  "exclude": ["build", "babel.config.js", "metro.config.js", "jest.config.js"]
+  "include": ["src", "test"],
+  "exclude": ["build"]
 }
